Theme/Chicago95/gtk-3.0/apps/xfce.css
/****************
 * XFCE DESKTOP *
 ****************/

/*
   Contributor notes:
   Please use two space indentions.
   Stack all related and child selectors and selector states into a logical hierarchy to a readable degree.
   Make sure that all changes made here are part of the XFCE desktop.
*/

/* Xfdesktop */
XfdesktopIconView.view {
  background: @xfd_icon_backdrop;
  color: @selected_bg_color;
  border-radius: 0px; }
  XfdesktopIconView.view:active {
    background: @selected_bg_color;
    text-shadow: none;
    color: shade(@selected_bg_color, 3.0); }
  XfdesktopIconView.view .label {
    text-shadow: none;
    color: @font_bright; }
  XfdesktopIconView.view .rubberband {
    border: 1px dotted @xfd_rubberband_outline;
    background: rgba(0,0,50.2,0.01); }

/* XFCE Panel Bar */
.xfce4-panel {
  box-shadow: none;
  border: 1px solid @border_dark;
  border-image: url("../buttons/dialog_button_normal.png");
  border-image-slice: 1 1 1 1; }
  /* Note: The ".xfce4-panel > widget > frame" and ".xfce4-panel .flat:not(.toggle)" CSS classes are specified in this manner due to the volatility in the naming of CSS IDs presented by the XFCE panelbar.*/
  .xfce4-panel > widget > frame, /* affects the frame of the notification area plugin for GTK2 notifications. */
  .xfce4-panel .flat:not(.toggle), /* affects the launcher buttons as well and the status notifier plugin. */
  #sn-button, /* Specifying this class is redundant due to ".xfce4-panel .flat:not(.toggle)" but included for consistency. */
  #xfce4-notification-plugin,
  #pulseaudio-button,
  #xfce4-power-manager-plugin,
  #indicator-button,
  #showdesktop-button {
    color: @panel_fg_color;
    margin-top: 2px;
    margin-bottom: 2px;
    padding: 0px;
    border: 2px solid transparent;
    box-shadow: none;
    background-color: transparent; }
    #showdesktop-button:checked {
      border: 2px solid @border_dark;
      border-image: url("../buttons/button_pressed.png");
      border-image-slice: 2 2 2 2;
      background-color: @bg_bright;
      background-image: linear-gradient(45deg, @bg_color 25%, transparent 25%, transparent 75%, @bg_color 75%, @bg_color), linear-gradient(45deg, @bg_color 25%, transparent 25%, transparent 75%, @bg_color 75%, @bg_dark);
      background-size: 2px 2px;
      background-position: 0 0, 1px 1px;}
    #indicator-button:hover,
    #indicator-button:active,
    #indicator-button:checked,
    .xfce4-panel .flat:not(.toggle):hover,
    .xfce4-panel .flat:not(.toggle):active,
    .xfce4-panel .flat:not(.toggle):checked,
    #sn-button:hover,
    #sn-button:active,
    #sn-button:checked,
    #xfce4-notification-plugin:hover,
    #xfce4-notification-plugin:active,
    #xfce4-notification-plugin:checked,
    #pulseaudio-button:hover,
    #pulseaudio-button:active,
    #pulseaudio-button:checked,
    #xfce4-power-manager-plugin:hover,
    #xfce4-power-manager-plugin:active,
    #xfce4-power-manager-plugin:checked {
      border: transparent;
      box-shadow: none;
      /*color: @panel_fg_color_bright;*/ /*If you choose to add a background colour, don't forget to uncomment the colour property here so that symbolic icons are properly shaded. You can change the colour propery value to whatever you want. */
      background-color: transparent; }   /* Adding a background colour to the following will highlight panel icons when hovered or checked if desired. */

/* Clock plugin */
#clock-button {
  border: 2px solid transparent;
  box-shadow: inset 1px 1px @border_shade, inset -1px -1px @border_bright;
  margin: 0px;
  background-color: transparent; }
  #clock-button label {
    padding: 2px; }

/*  Workspace switcher */
wnck-pager {
  color: white; }
  wnck-pager:selected {
    background-color: @selected_bg_color; }
  wnck-pager:hover {
    background-color: @border_shade;
    color: white; }

/* Panel entry */
/* NOTE! Entry background colouring is bugged in some versions of XFCE. */
.xfce4-panel entry {
  background-color: @base_color;
  margin: 2px;
  box-shadow: none; }
  .xfce4-panel entry selection {
    background-color: @selected_bg_color;
    color: @text_bright }

/* Plugin buttons */
.xfce4-panel .toggle {
  border: none;
  box-shadow: none;
  margin: 0px;
  background-color: transparent; }

/* Tasklist */
.tasklist .toggle {
  /* We remove borders and shadows for the '.tasklist' '.toggle' button 
   * directly so that we can apply margins to the inner toggle button 
   * box without impacting usability in which the user would otherwise 
   * require pointer precision to interact with the tasklist buttons.
   * NOTE OF REGRESSION: By choosing to apply border and shading effects
   * to the inner tasklist toggle button box, this will introduce a 
   * regression in the "show flat buttons" feature presented by the XFCE
   * Window Buttons plugin configuration setting.*/
  border: none;
  box-shadow: none;
  margin: 0px;
  background-color: transparent; }
  .tasklist .toggle box {
    transition: 0s font-weight;
    margin: 2px;
    border: 2px solid @border_dark;
    border-top: 3px solid @border_dark; /* Checked toggle buttons in Windows95 have a 3px multi-colour border.*/
    border-image: url("../buttons/dialog_button_normal.png");
    border-image-slice: 3 2 2 2;
    box-shadow: none; }
    .tasklist .toggle:active box {
      font-weight: bold;
      border: 2px solid @border_dark;
      border-top: 3px solid @border_dark;
      border-image: url("../buttons/button_pressed.png");
      border-image-slice: 3 2 2 2;
      transition-delay: 1s;
      box-shadow: none; }
    .tasklist .toggle:checked box {
      /*font-family: "NotoSans-Bold";*/
      font-weight: bold;
      border: 2px solid @border_dark;
      border-top: 3px solid @border_dark;
      border-image: url("../buttons/toggle_pressed.png");
      border-image-slice: 3 2 2 2;
      background-color: @scrollbar_trough_bg_color; /* This is how windows themes are applied */
      background-image: linear-gradient(45deg, @bg_color 25%, transparent 25%, transparent 75%, @bg_color 75%, @bg_color), linear-gradient(45deg, @bg_color 25%, transparent 25%, transparent 75%, @bg_color 75%, @bg_dark);
      background-size: 2px 2px;
      background-position: 0 0, 1px 1px;
      box-shadow: none; }

      .tasklist .toggle label {
        margin-right: 4px; }

/* XFCE APP: Color Profiles */
.color-profiles {
  padding: 4px }
  .color-profiles .inline-toolbar {
    border: 1px solid transparent;
    box-shadow: none; }

/* XFCE Power Manager plugin */
#xfce4-power-manager-plugin,
#xfce4-power-manager-plugin:active,
#xfce4-power-manager-plugin:hover,
#xfce4-power-manager-plugin:checked {
  margin: 0px;
  box-shadow: none;
  border: transparent; }
  #xfce4-power-manager-plugin * {
    -gtk-icon-style: regular;
    -gtk-icon-transform: scale(1); }

/* XFCE Notification plugin */
#xfce4-notification-plugin,
#xfce4-notification-plugin:active {
  margin: 0px;
  padding: 2px;
  box-shadow: none;
  border: transparent; }
  #xfce4-notification-plugin * {
    -gtk-icon-transform: scale(1); }

/* Pulse audio plugin buttons */
.xfce4-panel #pulseaudio-button,
.xfce4-panel #pulseaudio-button:active {
  margin: 0px;
  box-shadow: none;
  border: transparent; }
.xfce4-panel #pulseaudio-button * {
  -gtk-icon-transform: scale(1); }
.xfce4-panel #pulseaudio-button menu .linked button {
  color: @text_color;
  border-top-color: @border_bright;
  border-right-color: @border_dark;
  border-left-color: @border_bright;
  border-bottom-color: @border_dark;
  box-shadow: inset -1px -1px @border_shade; }
  .xfce4-panel #pulseaudio-button menu .linked button * {
    padding-left: 1px;
    padding-right: 1px; }
  .xfce4-panel #pulseaudio-button menu .linked button:active {
    color: @text_color;
    border-top-color: @border_dark;
    border-right-color: @border_bright;
    border-left-color: @border_dark;
    border-bottom-color: @border_bright;
    box-shadow: inset 1px 1px @border_shade; }
  .xfce4-panel #pulseaudio-button menu .linked button:disabled {
    color: @text_color;
    border-top-color: @border_bright;
    border-right-color: @border_dark;
    border-left-color: @border_bright;
    border-bottom-color: @border_dark; }

/* XFCE terminal */
#xfce4-terminal-notebook overlay > box,
#xfce4-terminal-notebook stack > box {
  border: 2px solid @border_dark;
  border-image: url("../assets/frame_inset.png");
  border-image-slice: 2 2 2 2;
  box-shadow: none; }
#xfce4-terminal-notebook header tabs tab box {
    padding: 0px;
    margin-top: -4px;
    margin-bottom: -4px; }
  #xfce4-terminal-notebook header tabs tab button {
    background: none;
    border: none;
    box-shadow: none; }
  #xfce4-terminal-notebook header tabs tab button image {
      padding: 0px;
      margin-top: -1px;
      margin-bottom: -2px; }

/* XFCE Session logout dialogue */
/* Doesn't look like this works, so moving it to the override... */
.xfsm-logout-dialog {
  border-left: 1px solid @border_bright;
  border-top: 1px solid @border_bright;
  border-bottom: 1px solid @border_dark;
  border-right: 1px solid @border_dark;
  box-shadow: inset -1px -1px @border_shade, inset 1px 1px @border_light; }

